test/trivial/shannon/condReturn2.good
condReturn2.chpl:4: In function 'foo':
condReturn2.chpl:4: error: tuple size must be known at compile-time
